--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.68 1999-10-10 01:47:06 mcr Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.69 1999-10-19 15:18:29 itojun Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -60,6 +60,13 @@ else
 	V_PCAP=null
 fi
 AC_MSG_RESULT($V_PCAP)
+
+AC_MSG_CHECKING(if --enable-ipv6 option is specified)
+AC_ARG_ENABLE(ipv6, [  --enable-ipv6           build IPv6-capable version])
+if test "$enable_ipv6" = "yes"; then
+	AC_DEFINE(INET6)
+fi
+AC_MSG_RESULT(${enable_ipv6-no})
 
 case "$V_PCAP" in
 
@@ -156,15 +163,21 @@ AC_LBL_SOCKADDR_SA_LEN
 
 AC_LBL_UNALIGNED_ACCESS
 
-if test -r ${srcdir}/lbl/gnuc.h ; then
+if test "${srcdir}" = "." ; then
+	srcdirprefix=""
+else
+	srcdirprefix="./"
+fi
+
+if test -r ${srcdirprefix}lbl/gnuc.h ; then
 	rm -f gnuc.h
-	ln -s ${srcdir}/lbl/gnuc.h gnuc.h
+	ln -s ${srcdirprefix}lbl/gnuc.h gnuc.h
 fi
 
 rm -f bpf_filter.c
-ln -s ${srcdir}/bpf/net/bpf_filter.c bpf_filter.c
+ln -s ${srcdirprefix}bpf/net/bpf_filter.c bpf_filter.c
 rm -f net
-ln -s ${srcdir}/bpf/net net
+ln -s ${srcdirprefix}bpf/net net
 
 AC_SUBST(V_CCOPT)
 AC_SUBST(V_INCLS)
