--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.71 1999-11-01 15:56:40 itojun Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.72 2000-01-08 06:08:49 assar Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,6 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
+AC_REVISION($Revision: 1.72 $)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
