--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.72 2000-01-08 06:08:49 assar Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.73 2000-02-23 11:39:44 itojun Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.72 $)
+AC_REVISION($Revision: 1.73 $)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
@@ -19,7 +19,7 @@ fi
 
 AC_LBL_C_INIT(V_CCOPT, V_INCLS)
 
-AC_CHECK_HEADERS(malloc.h sys/ioccom.h sys/sockio.h)
+AC_CHECK_HEADERS(malloc.h sys/ioccom.h sys/sockio.h ifaddrs.h)
 
 AC_LBL_FIXINCLUDES
 
