--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.74 2000-04-01 12:06:37 assar Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.75 2000-04-09 17:44:26 assar Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.74 $)
+AC_REVISION($Revision: 1.75 $)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
@@ -18,6 +18,8 @@ if test -z "$PWD" ; then
 fi
 
 AC_LBL_C_INIT(V_CCOPT, V_INCLS)
+
+AC_LBL_CHECK_TYPE(u_int32_t, u_int)
 
 AC_C___ATTRIBUTE__
 
