--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.79 2000-06-10 14:18:39 assar Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.80 2000-06-26 04:20:36 assar Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.79 $)
+AC_REVISION($Revision: 1.80 $)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
@@ -23,7 +23,7 @@ AC_LBL_CHECK_TYPE(u_int32_t, u_int)
 
 AC_C___ATTRIBUTE__
 
-AC_CHECK_HEADERS(malloc.h sys/ioccom.h sys/sockio.h ifaddrs.h)
+AC_CHECK_HEADERS(malloc.h sys/sockio.h ifaddrs.h)
 
 AC_LBL_FIXINCLUDES
 
@@ -114,7 +114,7 @@ dlpi)
 	;;
 
 linux)
-	AC_CHECK_HEADERS(net/if_arp.h netpacket/packet.h)
+	AC_CHECK_HEADERS(netpacket/packet.h)
 	AC_MSG_CHECKING(Linux kernel version)
  	if test "$cross_compiling" = yes; then
  		AC_CACHE_VAL(ac_cv_linux_vers,
