libpcap doesn't use <sys/ioccom.h>, but the test program in "AC_LBL_FIXINCLUDES" does, so we have to check for it, otherwise the configure script fails on, among other platforms, Solaris.

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.83 2000-07-11 00:38:19 assar Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.84 2000-07-14 02:12:36 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.83 $)
+AC_REVISION($Revision: 1.84 $)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
@@ -17,7 +17,13 @@ AC_C___ATTRIBUTE__
 
 AC_LBL_CHECK_TYPE(u_int32_t, u_int)
 
-AC_CHECK_HEADERS(sys/sockio.h ifaddrs.h)
+dnl
+dnl libpcap doesn't itself use <sys/ioccom.h>; however, the test program
+dnl in "AC_LBL_FIXINCLUDES" in "aclocal.m4" uses it, so we have to
+dnl test for it and set "HAVE_SYS_IOCCOM_H" if we have it, otherwise
+dnl "AC_LBL_FIXINCLUDES" won't work on some platforms such as Solaris.
+dnl
+AC_CHECK_HEADERS(sys/ioccom.h sys/sockio.h ifaddrs.h)
 
 AC_LBL_FIXINCLUDES
 
