--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.85 2000-08-16 20:28:52 fenner Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.86 2000-10-21 04:50:43 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.85 $)
+AC_REVISION($Revision: 1.86 $)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
@@ -196,10 +196,6 @@ sinix*)
 
 solaris*)
 	AC_DEFINE(HAVE_SOLARIS,1,[On solaris])
-	;;
-
-linux*)
-	V_INCLS="$V_INCLS -Ilinux-include"
 	;;
 esac
 
