"depend" should depend on "bpf_filter.c", so that we make the appropriate "bpf_filter.c" symlink before building the dependencies, so that the dependencies include those for "bpf_filter.c".

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,7 +17,7 @@
 #  WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 #  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 #
-# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.85 2000-12-17 07:25:40 guy Exp $ (LBL)
+# @(#) $Header: /tcpdump/master/libpcap/Makefile.in,v 1.86 2000-12-22 11:54:48 guy Exp $ (LBL)
 
 #
 # Various configurable paths (remember to edit Makefile.in, not Makefile)
@@ -183,5 +183,5 @@ tar:
 	    "rm -f ../$$name" ; \
 	     rm -f ../$$name
 
-depend:	$(GENSRC)
+depend:	$(GENSRC) bpf_filter.c
 	./mkdep -c $(CC) $(DEFS) $(INCLS) $(SRC)
