Sigh.  Not all systems have <netinet/if_ether.h> - for example, at least some libc5 Linux systems don't - so we have to check whether it exists, and include it only if it does.

--- a/config.h.in
+++ b/config.h.in
@@ -21,6 +21,9 @@
 /* Define if you have the <ifaddrs.h> header file.  */
 #undef HAVE_IFADDRS_H
 
+/* Define if you have the <netinet/if_ether.h> header file.  */
+#undef HAVE_NETINET_IF_ETHER_H
+
 /* Define if you have the <netpacket/packet.h> header file.  */
 #undef HAVE_NETPACKET_PACKET_H
 
