From Scott Barron <sb125499@ohiou.edu>: use the SOL_PACKET/PACKET_STATISTICS "getsockopt()" call, on Linux kernels that support it, to get packet statistics, so that we can report the number of dropped packets, and always use <linux/if_packet.h> to get definitions for PF_PACKET sockets, so that we don't depend on glibc's header files having been updated to support all the latest shiniest kernel features (many systems with 2.4[.x] kernels don't have a <netpacket/packet.h> that defines "struct tpacket_stats", for example, so we wouldn't have been able to support that kernel feature on those systems).

--- a/config.h.in
+++ b/config.h.in
@@ -24,9 +24,6 @@
 /* Define if you have the <netinet/if_ether.h> header file.  */
 #undef HAVE_NETINET_IF_ETHER_H
 
-/* Define if you have the <netpacket/packet.h> header file.  */
-#undef HAVE_NETPACKET_PACKET_H
-
 /* Define if you have the <sys/bufmod.h> header file.  */
 #undef HAVE_SYS_BUFMOD_H
 
@@ -65,6 +62,9 @@
 
 /* /dev/dlpi directory */
 #undef PCAP_DEV_PREFIX
+
+/* if if_packet.h has tpacket_stats defined */
+#undef HAVE_TPACKET_STATS
 
 /* define on AIX to get certain functions */
 #undef _SUN
