--- a/config.h.in
+++ b/config.h.in
@@ -9,9 +9,6 @@
 /* Define if you have the ether_hostton function.  */
 #undef HAVE_ETHER_HOSTTON
 
-/* Define if you have the freeifaddrs function.  */
-#undef HAVE_FREEIFADDRS
-
 /* Define if you have the strerror function.  */
 #undef HAVE_STRERROR
 
@@ -20,6 +17,9 @@
 
 /* Define if you have the <ifaddrs.h> header file.  */
 #undef HAVE_IFADDRS_H
+
+/* Define if you have the <limits.h> header file.  */
+#undef HAVE_LIMITS_H
 
 /* Define if you have the <netinet/if_ether.h> header file.  */
 #undef HAVE_NETINET_IF_ETHER_H
