If we have "/proc/net/dev", and don't have <ifaddrs.h> (i.e., don't have "getifaddrs()"), after processing the list returned by SIOCGIFCONF, scan "/proc/net/dev" for interface names, and add to the list of interfaces entries for those interfaces, with no associated addresses (if the interfaces were already added, with addresses, from the list returned by SIOCGIFCONF, they won't get added again).
Clean up the error handling a bit.

--- a/config.h.in
+++ b/config.h.in
@@ -66,6 +66,9 @@
 /* if if_packet.h has tpacket_stats defined */
 #undef HAVE_TPACKET_STATS
 
+/* define if you have a /proc/net/dev */
+#undef HAVE_PROC_NET_DEV
+
 /* define on AIX to get certain functions */
 #undef _SUN
 
