Put the different implementations of "pcap_findalldevs()" into separate source files, rather than having a pile of #ifdefs in "inet.c".  Add code to the configure script to determine which implementation to use on the platform for which libpcap is being built.
Add a "pcap_findalldevs()" implementation for Solaris 8 and later that
handles IPv6 addresses.

--- a/config.h.in
+++ b/config.h.in
@@ -104,6 +104,9 @@
 /* if struct sockaddr has sa_len */
 #undef HAVE_SOCKADDR_SA_LEN
 
+/* if struct sockaddr_storage exists */
+#undef HAVE_SOCKADDR_STORAGE
+
 /* if ppa_info_t_dl_module_id exists */
 #undef HAVE_HP_PPA_INFO_T_DL_MODULE_ID_1
 
