--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.97 2002-09-04 20:31:33 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.98 2003-02-11 06:21:00 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.97 $)
+AC_REVISION($Revision: 1.98 $)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
@@ -74,6 +74,13 @@ elif test -r /usr/include/linux/socket.h ; then
 	V_PCAP=linux
 elif test -r /usr/include/net/raw.h ; then
 	V_PCAP=snoop
+elif test -r /usr/include/odmi.h ; then
+	#
+	# On AIX, the BPF devices might not yet be present - they're
+	# created the first time libpcap runs after booting.
+	# We check for odmi.h instead.
+	#
+	V_PCAP=bpf
 elif test -r /usr/include/sys/dlpi.h ; then
 	V_PCAP=dlpi
 elif test -c /dev/bpf0 ; then		# check again in case not readable
